force-app/main/default/objects/Immigration_Case__c/Immigration_Case__c.object-meta.xml
<CustomObject>
    <label>Immigration Case</label>
    <nameField>
        <displayFormat>CASE-{0000}</displayFormat>
        <label>Case Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Immigration Cases</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>