force-app/main/default/objects/Immigration_Case__c/fields/Application_Count__c.field-meta.xml
<CustomField>
    <fullName>Application_Count__c</fullName>
    <label>Application Count</label>
    <summaryForeignKey>Application__c.Immigration_Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>