force-app/main/default/objects/Immigration_Case__c/fields/Attention_Required__c.field-meta.xml
<CustomField>
    <fullName>Attention_Required__c</fullName>
    <formula>NOT(ISBLANK(Next_Deadline_Date__c)) &amp;&amp; Next_Deadline_Date__c &lt;= TODAY() + 14</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attention Required</label>
    <type>Checkbox</type>
</CustomField>