force-app/main/default/objects/Immigration_Case__c/fields/Case_Health__c.field-meta.xml
<CustomField>
    <fullName>Case_Health__c</fullName>
    <formula>IF(ISPICKVAL(Stage__c,&apos;Approved&apos;),&apos;Complete&apos;, IF(Next_Deadline_Date__c &lt; TODAY(),&apos;Overdue&apos;, IF(Attention_Required__c,&apos;Attention&apos;,&apos;On Track&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Health</label>
    <type>Text</type>
</CustomField>