force-app/main/default/objects/Immigration_Case__c/fields/Case_Health_Icon__c.field-meta.xml
<CustomField>
    <fullName>Case_Health_Icon__c</fullName>
    <formula>IMAGE( Case_Health__c , &apos;-&apos;)</formula>
    <label>Case Health Icon</label>
    <type>Text</type>
</CustomField>