force-app/main/default/objects/Immigration_Case__c/fields/Completeness_Percent__c.field-meta.xml
<CustomField>
    <fullName>Completeness_Percent__c</fullName>
    <label>Completeness %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>