force-app/main/default/objects/Immigration_Case__c/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Household</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Immigration Cases</relationshipLabel>
    <relationshipName>Immigration_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>