force-app/main/default/objects/Immigration_Case__c/fields/Next_Deadline_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Deadline_Date__c</fullName>
    <label>Next Deadline</label>
    <type>Date</type>
</CustomField>