force-app/main/default/objects/Immigration_Case__c/fields/Next_Deadline_Desc__c.field-meta.xml
<CustomField>
    <fullName>Next_Deadline_Desc__c</fullName>
    <label>Next Deadline Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>