force-app/main/default/objects/Immigration_Case__c/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <label>Objective</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Temporary Residence</fullName>
            </value>
            <value>
                <fullName>Permanent Residence</fullName>
            </value>
            <value>
                <fullName>Citizenship</fullName>
            </value>
            <value>
                <fullName>Family Reunification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>