force-app/main/default/objects/Immigration_Case__c/fields/Open_Application_Count__c.field-meta.xml
<CustomField>
    <fullName>Open_Application_Count__c</fullName>
    <label>Open Application Count</label>
    <summaryFilterItems>
        <field>Application__c.Is_Closed__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Application__c.Immigration_Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>