force-app/main/default/objects/Immigration_Case__c/fields/Opened_Date__c.field-meta.xml
<CustomField>
    <fullName>Opened_Date__c</fullName>
    <defaultValue>(Today())</defaultValue>
    <label>Opened Date</label>
    <type>Date</type>
</CustomField>