force-app/main/default/objects/Immigration_Case__c/fields/Primary_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Primary_Applicant__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Primary Applicant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Immigration Cases</relationshipLabel>
    <relationshipName>Immigration_Cases</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>