force-app/main/default/objects/Immigration_Case__c/fields/Status_Summary__c.field-meta.xml
<CustomField>
    <fullName>Status_Summary__c</fullName>
    <label>Status Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>