force-app/main/default/objects/Immigration_Case__c/fields/Total_Fees_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Fees_Paid__c</fullName>
    <label>Total Fees Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>